<resources>
    <string name="app_name">Finance Tracker</string>
    <!--    Landing page-->
    <string name="landingContent">Best way to save your money</string>
    <string name="signup">Sign up</string>
    <string name="signIn">Sign in</string>
    <string name="contentDescription">Landing Image</string>
    <!--    Sign in-->
    <string name="name">Username</string>
    <string name="password">Password</string>
    <string name="signInContent">I\'m new user.</string>
    <!--    Sign up-->
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="signUpContent">Already have an account.</string>
    <!--    Bottom navigation-->
    <string name="transactions">Transactions</string>
    <string name="budget">Budget</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <!--    Dashboard-->
    <string name="dashboard">Dashboard</string>
    <string name="lkr">LKR</string>
    <string name="availableBalance">Available balance</string>
    <string name="addIncome">Add income</string>
    <string name="addExpense">Add expense</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="sampleValue">0,000.00</string>    <!-- Sample -->
    <string name="sampleMonth">April 2025</string>  <!-- Sample -->
    <!--    Add income-->
    <string name="addTransaction">Add transaction</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <!--    Transactions-->
    <string name="search">Search</string>
    <string name="sampleDate">10/04/2025</string>   <!-- Sample -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <!--    Budget-->
    <string name="addMonthlyBudget">Add monthly budget</string>
    <string name="addMonthlyBudgetCaption">App will be notified when the specified limit is reached.</string>
    <!--    Analytics-->
    <string name="expenseSummary">Expense Summary</string>
    <string name="incomeSummary">Income Summary</string>
    <string name="selectMonth">Select Month</string>
    <string name="totalIncome">Total Income</string>
    <string name="totalExpense">Total Expense</string>
    <string name="totalBalance">Total Balance</string>
    <!--    Settings-->
    <string name="notifications">Notifications</string>
    <string name="exceedingBudget">Warning when exceeding budget</string>
    <string name="reaches80Budget">When spending reaches 80% of budget</string>
    <string name="advancedOptions">Advanced options</string>
    <string name="exportData">Export data to file</string>
    <string name="importData">Import data from file</string>
    <string name="profileOptions">Account options</string>
    <string name="logout">Log out</string>

    <!--    Transaction categories (Array)-->
    <string-array name="transaction_categories">
        <item>Select Category</item>
        <item>Salary</item>
        <item>Freelance</item>
        <item>Investments</item>
        <item>Food</item>
        <item>Transportation</item>
        <item>Utilities</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>