<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BudgetFragment">

    <include
        android:id="@+id/header"
        layout="@layout/fragment_header"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp">

        <!-- Input monthly budget -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addMonthlyBudget"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_text_background"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="14dp">

            <EditText
                android:id="@+id/budget_edit_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:hint="@string/sampleValue"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lkr"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addMonthlyBudgetCaption"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</FrameLayout>