<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <!-- Logo and App Title -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/darkBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <!-- Illustration -->
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:src="@drawable/landing_image"
        android:contentDescription="@string/contentDescription"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- White Rounded Bottom Sheet -->
    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="38dp"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_top_white"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Subtitle -->
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp" />

        <!-- Input fields-->
        <EditText
            android:id="@+id/edit_username"
            android:autofillHints="username"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_account"
            android:drawableTint="@color/darkBlue"
            android:drawablePadding="8dp"
            android:layout_height="48dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/darkBlue"
            android:inputType="text"
            android:padding="12dp" />

        <EditText
            android:id="@+id/edit_password"
            android:autofillHints="password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="22dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawableTint="@color/darkBlue"
            android:drawablePadding="8dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/darkBlue"
            android:inputType="textPassword"
            android:padding="12dp" />

        <!-- Sign in Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/signIn"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/darkBlue"
            android:textStyle="bold"
            android:layout_marginBottom="14dp"
            app:cornerRadius="8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signInContent"
                android:textSize="14sp"
                android:textColor="@color/lightBlue"
                android:layout_marginBottom="28dp" />

            <TextView
                android:id="@+id/text_btn_signUp"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/signup"
                android:textSize="14sp"
                android:textColor="@color/darkBlue"
                android:layout_marginBottom="28dp"
                android:layout_marginStart="4dp"
                android:textAllCaps="true"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>