<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <include
        android:id="@+id/header"
        layout="@layout/fragment_header"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp">

        <!-- Notifications settings -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/exceedingBudget"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/budget_exceed_notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checked="true"
                app:trackTint="@color/switch_track"
                app:thumbTint="@color/switch_thumb" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/reaches80Budget"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/budget_exceed_reaching_notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checked="true"
                app:trackTint="@color/switch_track"
                app:thumbTint="@color/switch_thumb" />
        </LinearLayout>

        <!-- Advanced options settings -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advancedOptions"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="0dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_export"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/exportData"
                app:tint="@color/lightBlue" />

            <Button
                android:id="@+id/btn_export"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/exportData"
                android:textSize="14sp"
                android:background="@android:color/transparent"
                android:textAlignment="textStart"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_import"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/importData"
                app:tint="@color/lightBlue" />

            <Button
                android:id="@+id/btn_import"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/importData"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Profile options settings -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileOptions"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/text_btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/logout"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:layout_marginBottom="28dp"
            android:layout_marginStart="18dp"
            android:textAllCaps="true"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</FrameLayout>